--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # State management
+  flutter_bloc: ^8.1.3
+
+  # HTTP client
+  http: ^1.1.0
+
+  # Local storage
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
